[tool.poetry]
name = "treasury"
version = "0.1.0"
description = "a simple income/expense manger with cli"
authors = ["ejix <ejix@zp1.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
#psycopg2 = "^2.9.5"
flake8 = "^6.0.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
